# cero

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  run.sh  stop.sh
.claude/: settings.local.json
cero/: __init__.py  __main__.py  config.py  events.py  main.py
cero/brain/: criteria.py  direction.py  indicators.py  momentum.py  risk.py  scheduler.py  scoring.py  signals.py
cero/data/: account_worker.py  calendar_worker.py  exchange.py  news_worker.py  price_worker.py
cero/db/: models.py  queries.py  session.py
cero/exec/: modes.py  momentum_worker.py  oco.py  orders.py  paper.py  protocols.py
docs/: ARCHITECTURE.md  CRITERIA.md  DEPLOY_ANDROID.md  DEVELOPMENT.md  SETUP.md  USAGE.md  VALIDATION.md
scripts/: backfill_mainnet.py  backtest_mainnet.py  backtest_signals.py  baseline_compare.py  check_dependencies.py  cleanup_test_session.py  criteria_stats.py  criterion_edge.py  funding_analysis.py  list_symbols.py  migrate_add_strategy_column.py  momentum_backtest.py  momentum_check.py  momentum_paper.py  momentum_review.py  morning_check.py  proto_meanrev.py  reset_validation_data.py  signal_lab.py  signal_search.py  smoke_brain.py  smoke_db.py  smoke_exchange.py  smoke_modes.py  smoke_orders.py  smoke_price_worker.py  smoke_telegram.py  suggest_round_step.py
tests/: test_account_worker.py  test_calendar_worker.py  test_criteria.py  test_indicators.py  test_modes.py  test_momentum_risk.py  test_news_worker.py  test_orders.py  test_risk.py  test_scheduler.py  test_scoring.py  test_strategies.py  test_telegram.py  test_web.py
(+10 files in other folders)
