[project]
name = "cero"
version = "0.1.0"
description = "Personal crypto trading assistant"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Exchange connectivity
    "ccxt>=4.4.0",                  # multi-exchange unified API

    # Async + HTTP
    "aiohttp>=3.9.0",
    "websockets>=12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",

    # Data + indicators
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta-classic>=0.4.0",     # technical indicators

    # Config + validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",

    # Web dashboard
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # Telegram bot
    "aiogram>=3.4.0",

    # News / scraping (optional but recommended)
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",

    # Logging
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cero"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # let formatter handle line length

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
